Quick fix to improve the horizontal alignment of the footer. This probably only looks right on 1920x1080 though!

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,7 @@ footer {
 #footer-content-wrapper {
   display: table;
   margin: 0 auto;
-  width: 1170px;
+  width: 68%;
   padding: 10px 0px;
 }
 
